# Vega-CLI

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
config/: __init__.py  models.py  settings.py
providers/: __init__.py  base.py  deepseek.py  google.py  groq.py  nvidia.py
tests/: test_agents.py  test_builder.py  test_router.py  test_settings.py
tools/: __init__.py  file_writer.py  zip_export.py
vega/: __init__.py  agents.py  builder.py  chat.py  display.py  main.py  router.py
vega-docs/: changelog.mdx  faq.mdx  installation.mdx  introduction.mdx  mint.json  quickstart.mdx  troubleshooting.mdx
vega-docs/cli/: agents.mdx  api-keys.mdx  commands.mdx  models.mdx
vega-docs/examples/: apis.mdx  apps.mdx  websites.mdx
vega_raimic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web/: package.json
