[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────
#  Project metadata
# ─────────────────────────────────────────────

[project]
name        = "vega-raimic"
version     = "0.1.0"
description = "Vega CLI — Code at the speed of stars | by Raimic Labs"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "Raimic Labs", email = "hello@raimic.dev" }]
keywords    = ["cli", "ai", "llm", "coding-assistant", "nvidia", "gemini", "groq", "deepseek"]
requires-python = ">=3.10"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Terminals",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "typer[all]>=0.12.0",
  "rich>=13.7.0",
  "openai>=1.30.0",
  "groq>=0.9.0",
  "google-genai>=1.0.0",
  "httpx>=0.27.0",
]

# ─────────────────────────────────────────────
#  CLI entry point
# ─────────────────────────────────────────────

[project.scripts]
vega = "vega.main:app"

# ─────────────────────────────────────────────
#  Optional extras
# ─────────────────────────────────────────────

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "black>=24.0",
  "ruff>=0.4.0",
  "mypy>=1.10",
]

# ─────────────────────────────────────────────
#  URLs
# ─────────────────────────────────────────────

[project.urls]
Homepage      = "https://github.com/raimic-labs/vega-cli"
Repository    = "https://github.com/raimic-labs/vega-cli"
Issues        = "https://github.com/raimic-labs/vega-cli/issues"
Documentation = "https://github.com/raimic-labs/vega-cli#readme"

# ─────────────────────────────────────────────
#  Setuptools configuration
# ─────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["vega*", "providers*", "config*", "tools*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

# ─────────────────────────────────────────────
#  Tool configs
# ─────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version         = "3.10"
ignore_missing_imports = true
strict                 = false

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
